--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -10,6 +10,8 @@
 }
 
 body {
-    display: table;
-    place-items: center;
+    background:rgb(51, 51, 51);
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
