--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -2,11 +2,13 @@
 @import "./card.css";
 @import "./startOptions.css";
 @import "./cardRow.css";
+@import "./activeRowContainer.css";
 
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family:'Trebuchet MS', sans-serif;
 }
 
 body {
