--- a/src/styles/startOptions.css
+++ b/src/styles/startOptions.css
@@ -1,8 +1,24 @@
 #startOptions {
     position: absolute;
-    top: calc(50% - 150px);
-    left: calc(50% - 250px);
-    width: 500px;
-    height: 300px;
+    top: calc(50% - 100px);
+    left: calc(50% - 150px);
+    width: 300px;
+    height: 200px;
     background: white;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    border-radius: 5px;
+}
+
+#startOptions select
+{
+    margin: 10px 0;
+}
+
+#startOptions select, #startOptions button
+{
+    width: 150px;
 }
