--- a/src/styles/cardRow.css
+++ b/src/styles/cardRow.css
@@ -1,8 +1,9 @@
 .cardRow {
     display: flex;
     justify-content: center;
-    width: 1275px;
-    height: 210px;
+    align-items: center;
+    width: 1295px;
+    height: 230px;
     background:rgb(83, 83, 83);
     border-radius: 5px;
 }
