--- a/src/styles/card.css
+++ b/src/styles/card.css
@@ -4,7 +4,7 @@ card-element {
     background: orange;
     border-radius: 5px;
     padding: 5px;
-    box-shadow: rgba(0, 0, 0, 0.534) 0px 3px 8px;
+    border: 5px solid rgb(184, 119, 0);
 }
 
 #playerHand card-element:hover {
@@ -21,3 +21,7 @@ card-element {
     color: green;
 }
 
+.belowBaseValue > h2
+{
+    color: red;
+}
