--- a/src/styles/deck.css
+++ b/src/styles/deck.css
@@ -1,8 +1,7 @@
-.deck {
+.cardBack {
     width: 150px;
     height: 210px;
     background: orange;
     border-radius: 5px;
     padding: 5px;
-    box-shadow: rgba(0, 0, 0, 0.534) 0px 3px 8px;
 }
